[gd_scene load_steps=5 format=2]

[ext_resource path="res://FeatButt.gd" type="Script" id=1]
[ext_resource path="res://fitheight.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.254902, 0.243137, 0.286275, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.254902, 0.243137, 0.286275, 1 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.254902, 0.243137, 0.286275, 1 )

[node name="Feat" type="VBoxContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1026.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1025.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Boarder2" type="PanelContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 1025.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 37 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Boarder2"]
margin_left = 2.0
margin_top = 2.0
margin_right = 819.0
margin_bottom = 60.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Boarder2/ScrollContainer"]
margin_right = 817.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Boarder2/ScrollContainer/VBoxContainer"]
margin_right = 817.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/Boarder2/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 406.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 0
fit_content_height = true
script = ExtResource( 2 )

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContainer/Boarder2/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 817.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 0
fit_content_height = true
script = ExtResource( 2 )

[node name="RichTextLabel" type="Label" parent="HBoxContainer/Boarder2/ScrollContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 817.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 66.0
margin_right = 1025.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 38 )

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="HBoxContainer/OptionButton" method="_on_OptionButton_item_selected"]
